# champlain_petclinic

./: .gitignore  .yamllint.yml  CONTRIBUTING.md  LICENSE  README.md  app  build_and_push_acr.sh  cover.sh  create-ms-projects.bash  docker-compose.gateway_auth_inventory_fe.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose_no_FE.yml  go.mod  go.sum  nginx.conf  package-lock.json  package.json  pull_request_template.md  qodana.yaml  settings.gradle  structure101-settings.java.hsw  tatus  test_all.bash
dev-tools/: Cargo.toml  Dockerfile  docker-compose.yml
dev-tools/src/: bootstrap.rs  main.rs
dev-tools/src/application/: mod.rs
dev-tools/src/auth/: mod.rs  repo.rs  service.rs  session_guard.rs
dev-tools/src/business_layer/: file_service_service.rs
dev-tools/src/core/: config.rs  error.rs  mod.rs
dev-tools/src/db/: database.rs  error.rs  mod.rs
dev-tools/src/domain/: mod.rs
dev-tools/src/domain_client_layer/: minio_client_service.rs  mod.rs
dev-tools/src/file_service/: api.rs  config.rs  error.rs  minio_client.rs  mod.rs  service.rs
dev-tools/src/file_service_subdomain/: mod.rs
dev-tools/src/handlers/: global_exception_handler.rs  mod.rs
dev-tools/src/http/: auth.rs  buckets.rs  error.rs  error_response.rs  files.rs  mod.rs  prelude.rs  users.rs
dev-tools/src/migrations/: 01_init.sql
dev-tools/src/minio/: error.rs  minio_client.rs  mod.rs  service.rs  store.rs
dev-tools/src/minio_service/: bucket.rs  error.rs  minio_client.rs  service.rs
dev-tools/src/presentation_layer/: file_service_controller.rs  mod.rs
dev-tools/src/shared/: config.rs  error.rs  mod.rs
dev-tools/src/users/: mod.rs  repo.rs  service.rs  user.rs
(+3389 files in other folders)
