[package]
name = "dev-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
minio = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
infer = "0.19.0"
thiserror = "2.0.17"
http = "1.3.1"