[package]
name = "dev-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
minio = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
infer = "0.19.0"
thiserror = "2.0.17"
http = "1.3.1"
rand_core = "0.9.3"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "chrono", "uuid"] }
argon2 = { version = "0.5", features = ["std", "password-hash"] }
chrono = "0.4.42"
time = "0.3.44"
async-trait = "0.1.89"
bytes = "1.10.1"
futures = "0.3.31"
veil = "0.2.0"
log = "0.4.28"
